--- a/views/adminLayouts/navbar.ejs
+++ b/views/adminLayouts/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="screen-overlay"></div>
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
-            <a href="index.html" class="brand-wrap ">
+            <a href="/admin/dashboard" class="brand-wrap ">
                 <img src="/admin/imgs/theme/logo.svg" class="logo" alt="Evara Dashboard">
             </a>
             <div>
@@ -12,7 +12,7 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item " id="dashboardMenuItem">
-                    <a class="menu-link" href="index.html"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link" href="/admin/dashboard"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
@@ -51,17 +51,16 @@
                     </a>
                     <div class="submenu">
                         <a href="/admin/orderList">Order list</a>
-                        <!-- <a href="">Order detail</a> -->
                         
                     </div>
                 </li>
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
-                    <a class="menu-link" href="">
+                    <a class="menu-link" href="/admin/salesReport">
                         <i class="icon material-icons md-trending_up"></i>
                         <span class="text">Sales</span>
                     </a>
                     <div class="submenu">
-                        <a href="">Sale Report</a>
+                        <a href="/admin/salesReport">Sales Report</a>
                     </div>
                 </li>
                 
